# insurance-interview

./: .gitignore  README.md
task_1/: README.md  main.py  tests.py
task_2/: .pre-commit-config.yaml  README.md  pyproject.toml
task_2/car_scraper/: cars_checker.py  cars_provider.py  cars_saver.py  errors.py  great_ex.py  logs.py  models.py  service.py
task_2/car_scraper/cli/: check.py  scrape.py
task_2/car_scraper/config/: car_motors.yaml
task_2/car_scraper/expectations/: expect_engine_power_for_car_model.py
task_2/test/data/: cars.jsonl  item.json  list.json
